<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupScreen">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/dieta_logo"/>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="16sp"
        android:elevation="@dimen/elevation_val"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="16sp"
        android:elevation="@dimen/elevation_val"
        android:textColorHint="@color/grey" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:backgroundTint="@color/black"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/edit_text_background"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login_button_text"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>