<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashboardScreen">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_anim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="@dimen/card_item_height"
            android:layout_height="@dimen/card_item_height"
            app:lottie_url="https://assets5.lottiefiles.com/private_files/lf30_cjoryulu.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
    </LinearLayout>



    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/custom_action_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:background="@color/blue">

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/alice"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/login_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:gravity="end"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textAllCaps="false"
                android:layout_centerVertical="true"
                android:paddingEnd="@dimen/margin_views"
                android:paddingStart="0dp"
                android:layout_marginEnd="@dimen/margin_views"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:layout_below="@id/custom_action_bar"
            android:paddingStart="@dimen/margin_views"
            android:paddingEnd="@dimen/margin_views"
            android:layout_marginTop="@dimen/margin_views">


            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/card_item_category_height"
                android:text="@string/recipes"
                android:paddingStart="@dimen/text_card_margin"
                android:paddingEnd="@dimen/text_card_margin"
                android:gravity="center"
                android:elevation="@dimen/elevation_val"
                android:fontFamily="@font/alice"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:entries="@array/tags"
                android:background="@drawable/item_background"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_views"/>


            <SearchView
                android:id="@+id/search_dashboard"
                android:layout_width="@dimen/searchbar_width"
                android:layout_height="@dimen/card_item_category_height"
                android:elevation="@dimen/elevation_val"
                android:queryHint="Search"
                android:layout_toEndOf="@id/category_spinner"
                android:background="@drawable/item_background"
                android:layout_marginStart="@dimen/search_margin_start"
                android:layout_marginEnd="@dimen/margin_views"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl_search"
            android:layout_marginStart="@dimen/margin_views"
            android:layout_marginTop="@dimen/margin_views"
            android:layout_marginEnd="@dimen/margin_views"
            android:layout_marginBottom="@dimen/margin_views"
            tools:itemCount="5"
            tools:listitem="@layout/category_items_dashboard_rv" />


    </RelativeLayout>


</LinearLayout>